        Students: added a notification event for Application Form Accepted
        Students: added an option for logged-in users to link new Application Forms to an existing user or family
		Students: added ability to delete files and upload multiple files in Edit Application Form
		Students: amended Academic alert to account only for data in the last 60 days
		System Admin: increased length of Absolute URL and Absolute Path to 100 characters
        System Admin: updated version check to handle semantic version numbers
		Timetable: added ability to set and display text and background colour for timetable day headers
		Timetable: adjusted font size for shorter lessons to allow display or facility name
		Timetable: adjusted timetable on homepage to show next week if today is a Sunday with no school
		Timetable: fixed rendering issue when week starts Sunday but Sunday is not a school day (and similar cases)
		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
		Timetable Admin: updated Course Enrolment Rollover to prevent duplicates and not copy users set to Left
        Timetable Admin: fixed Course Enrolment by Person to allow staff category without All Users checked
		User Admin: improved usability of feedback in Step 3 of the rollover
		User Admin: made Pending Approval option in Status in edit User appear only if Public Registration is enabled
        User Admin: updated Add User and Edit User to allow PDF files for ID documents
        User Admin: added ability to set username formats by role in User Settings
        User Admin: added a button to generate usernames in Add User
        User Admin: added an Available Years of Entry setting to select which years are available in the student application

v14.0.01
--------
	Security
		Fixed role switcher privilege escalation issue

v14.0.00
--------
	Headlines
		Object oriented form API